--- a/package.json
+++ b/package.json
@@ -3,29 +3,33 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://Amr-shousha.github.io/eat-and-split",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext .js,.jsx",
     "lint:fix": "eslint src --ext .js,.jsx --fix",
-    "format": "prettier --write \"src/**/*.{js,jsx,css,md}\""
+    "format": "prettier --write \"src/**/*.{js,jsx,css,md}\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "eslint": "^9.38.0",
     "@eslint/js": "^9.38.0",
+    "@vitejs/plugin-react": "^5.0.4",
+    "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.0",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "prettier": "^3.6.2",
-    "vite": "^7.1.7",
-    "@vitejs/plugin-react": "^5.0.4"
+    "vite": "^7.1.7"
   }
 }
